--- a/projects.html
+++ b/projects.html
@@ -212,15 +212,15 @@
           <!-- Nav tabs -->
           <ul class="nav nav-tabs text-center" id="myTab" role="tablist">
             <li class="col px-0">
-              <a class="nav-link" id="home-tab" data-toggle="tab" role="tab" aria-controls="home" aria-selected="false">Proyek Saat Ini</a>
+              <a class="nav-link active" id="home-tab" data-toggle="tab" role="tab" aria-controls="home" aria-selected="true">Proyek Saat Ini</a>
             </li>
             <li class="col px-0">
-              <a class="nav-link active" id="profile-tab" data-toggle="tab" role="tab" aria-controls="profile" aria-selected="true">Proyek yang Sudah Selesai</a>
+              <a class="nav-link " id="profile-tab" data-toggle="tab" role="tab" aria-controls="profile" aria-selected="false">Proyek yang Sudah Selesai</a>
             </li>
           </ul>
           <!-- Tab panes -->
           <div class="tab-content overflow-hidden">
-            <div class="tab-pane py-lg-5" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <div class="tab-pane py-lg-5 active" id="home" role="tabpanel" aria-labelledby="home-tab">
               <div class="row">
                 <div class="col-lg-12">
                   <div class="map-wrap">
@@ -306,7 +306,7 @@
                 </div>
               </div>
             </div>
-            <div class="tab-pane py-lg-5 active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <div class="tab-pane py-lg-5" id="profile" role="tabpanel" aria-labelledby="profile-tab">
               <div class="row">
                 <div class="col-lg-12">
                   <div class="map-wrap">
