--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
       <div class="row">
         <div class="container-fluid py-lg-5">
           <div class="row my-lg-5 py-lg-5">
-            <div class="col-lg-3">
+            <div class="col-lg-3 menu-about">
               <div class="nav  bg-white py-lg-4 flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <a class="nav-link py-lg-3 px-lg-5 active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">TENTANG KAMI</a>
                 <a class="nav-link py-lg-3 px-lg-5" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">VISI & MISI</a>
