--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="contact.html">
+                      <a href="career.html">
                         Karir
                       </a>
                     </li>
@@ -180,18 +180,22 @@
         </div>
       </div>
     </div> 
-    <div class="container-fluid about-mid bg-dark-blue position-relative overflow-hidden">
+    <div class="wrap-about-content position-relative">
+      <div class="nav nav-about-content">
+        <div class="wrap-position">
+          <a class="d-block nav-link current" href="#tentang">TENTANG KAMI</a>
+          <a class="d-block nav-link" href="#visi">VISI & MISI</a>
+          <a class="d-block nav-link" href="#nilai">NILAI-NILAI INTI</a>
+          <a class="d-block nav-link" href="#dewan">DEWAN KOMISARIS</a>
+          <a class="d-block nav-link" href="#direksi">DIREKSI</a>
+        </div>
+      </div>
+    <div id="tentang" class="container-fluid about-mid bg-dark-blue position-relative overflow-hidden">
       <div class="row">
         <div class="container-fluid py-lg-5">
           <div class="row my-lg-5 py-lg-5">
             <div class="col-lg-3 menu-about">
-              <div class="nav  bg-white py-lg-4 flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                <a class="nav-link py-lg-3 px-lg-5 active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">TENTANG KAMI</a>
-                <a class="nav-link py-lg-3 px-lg-5" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">VISI & MISI</a>
-                <a class="nav-link py-lg-3 px-lg-5" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">NILAI-NILAI INTI</a>
-                <a class="nav-link py-lg-3 px-lg-5" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">DEWAN KOMISARIS</a>
-                <a class="nav-link py-lg-3 px-lg-5" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">DIREKSI</a>
-              </div>
+              
             </div>
             <div class="col-lg-8 ml-lg-5">
               <div class="tab-content" id="v-pills-tabContent">
@@ -291,8 +295,7 @@
                     
         </div>
       </div>
-    </div>
-    <div class="container-fluid about-visi-content position-relative  bg-light-gray py-lg-5">
+    <div id="visi" class="container-fluid about-visi-content position-relative  bg-light-gray py-lg-5">
       <img class="segitiga-biru" src="images/segitiga-biru-muda-kiri-12-02.png" alt="">
       <div class="row my-lg-5">
         <div class="col-lg-8  pl-lg-5 offset-lg-3">
@@ -377,7 +380,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid about-nilai py-lg-5">
+    <div id="nilai" class="container-fluid about-nilai py-lg-5">
       <div class="row py-lg-5 my-lg-5">
         <div class="col-lg-8  pl-lg-5 offset-lg-3">
           <h2 class="text-orange mb-lg-4">
@@ -434,8 +437,8 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid bg-light-gray dewan-direksi">
-      <div class="row py-lg-5 my-lg-5">
+    <div id="dewan" class="container-fluid bg-light-gray dewan-direksi">
+      <div class="row pt-lg-5 mt-lg-5">
         <div class="col-lg-8  pl-lg-5 offset-lg-3">
           <h2 class="text-orange my-lg-5">
             Dewan Komisaris
@@ -451,6 +454,12 @@
               <img src="images/about-dewan-content-02.jpg" alt="">
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+    <div id="direksi" class="container-fluid bg-light-gray  dewan-direksi">
+      <div class="row  py-lg-5">
+        <div class="col-lg-8  pl-lg-5 offset-lg-3">
           <h2 class="text-orange my-lg-5">
             Direksi
           </h2>
@@ -465,7 +474,8 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid bg-white py-lg-5">
+    </div>
+    <div class="container-fluid bg-white py-lg-5 footer-top">
       <div class="row text-center">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
@@ -497,7 +507,7 @@
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-5 pt-5">
+  <div class="container-fluid footer-details bg-white mb-5 pt-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
