--- a/businesses.html
+++ b/businesses.html
@@ -51,7 +51,7 @@
               </a>
             </li>
             <li>
-              <a href="contact.html">
+              <a href="career.html">
                 Karir
               </a>
             </li>
@@ -197,13 +197,19 @@
             <div class="tab-pane py-lg-5 active" id="home" role="tabpanel" aria-labelledby="home-tab">
               <div class="d-lg-flex pt-5 mt-lg-5">
                 <div class="col-lg-7 col-12 pl-lg-0" data-aos="fade-up">
-                  <img class="img-fluid" src="images/csr-program-tab-content-07.jpg" alt="">
+                  <img class="img-fluid w-100" src="images/business-image-placement-07.jpg" alt="">
                 </div>
                 <div class="col-lg-5 col-12 details" data-aos="fade-right">
                   <p class="text-gray brief-details">
                     Bisnis utama Ansaf adalah menyediakan jasa pertambangan, dalam bentuk pemindahan lapisan penutup, ekstraksi batubara, transportasi ke stock pile untuk pengiriman lebih lanjut. 
 
 Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang tenaga kerja berkualitas serta alat produksi yang tepat untuk melaksanakan kegiatan penambangan batubara.
+
+<a href="projects.html" class="link-orange-border my-lg-5 d-inline-block">
+  <span class="text-orange">
+    LIHAT PROYEK KAMI
+  </span> 
+</a>
                   </p>
                 </div>
               </div>
@@ -211,7 +217,7 @@ Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang te
             <div class="tab-pane py-lg-5" id="profile" role="tabpanel" aria-labelledby="profile-tab">
               <div class="d-lg-flex pt-5 mt-lg-5">
                 <div class="col-lg-7 col-12 pl-lg-0">
-                  <img class="img-fluid" src="images/csr-program-tab-content-08.jpg" alt="">
+                  <img class="img-fluid w-100" src="images/business-image-placement-07.jpg" alt="">
                 </div>
                 <div class="col-lg-5 col-12 details">
                   <p class="text-gray brief-details">
@@ -222,20 +228,20 @@ Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang te
               <div class="container py-lg-5">
                 <div class="row">
                   <div class="col-lg-3 text-center">
-                    <a href="#" data-toggle="modal" data-target="#exampleModal">
+                    <a href="#" data-toggle="modal" data-target="#psm">
                       <img class="img-fluid" src="images/logo-bisnis-psm-05.png" alt="">
                     </a>
-                    <a class="text-dark" href="#" data-toggle="modal" data-target="#exampleModal">
+                    <a class="text-dark" href="#" data-toggle="modal" data-target="#psm">
                       <h6>
                         PT Palaran Sinergi Mas
                       </h6>
                     </a>
                   </div>
                   <div class="col-lg-3 text-center">
-                    <a href="#" data-toggle="modal" data-target="#exampleModal">
+                    <a href="#" data-toggle="modal" data-target="#esp">
                       <img class="img-fluid" src="images/logo-bisnis-esp-05.png" alt="">
                     </a>
-                    <a class="text-dark" href="#" data-toggle="modal" data-target="#exampleModal">
+                    <a class="text-dark" href="#" data-toggle="modal" data-target="#esp">
                       <h6>
                         PT Embalut Sinergi Mas
                       </h6>
@@ -327,23 +333,48 @@ Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang te
   </div>
 </div>
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="psm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-gallery" role="document">
     <div class="modal-content">
       <div class="modal-body">
         <div class="row">
           <div class="col-lg-7 pr-lg-0">
-                <img class="w-100" src="images/gallery-thumbnail-content-03.jpg" alt="">
+                <img class="w-100" src="images/business-new-content-06.jpg" alt="">
           </div>
           <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4">
             <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
             <div class="content-wrapper d-flex">
               <div class="inline-block pl-lg-4">
-                <img src="images/logo-bisnis-mount-05.png" alt="">
+                <img src="images/logo-bisnis-psm-05.png" alt="">
                   <p class="text-gray">
                     PT Palaran Sinergi Mas bergerak dalam bidang jasa pengelolaan pelabuhan batubara di Palaran, berupa stock pile seluas 32 hektar yang dapat menampung 250.000 mt batubara disamping menyediakan konveyor dengan kapasitas hingga 1.000 mt/jam.
                     <br><br>
 Di bawah pengawasan tenaga ahli di bidang jasa pelabuhan batubara, PSM menyediakan jasa pelabuhan berkualitas sesuai kebutuhan pelanggan, mulai dari pengangkutan, penghalusaan dan pencampuran sehingga siap dikapalkan.
+                  </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="esp" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-gallery" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-lg-7 pr-lg-0">
+                <img class="w-100" src="images/business-new-content-05.jpg" alt="">
+          </div>
+          <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4">
+            <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
+            <div class="content-wrapper d-flex">
+              <div class="inline-block pl-lg-4">
+                <img src="images/logo-bisnis-esp-05.png" alt="">
+                  <p class="text-gray">
+                    PT Embalut Sinergi Mas Persada bergerak dalam bidang jasa pengelolaan pelabuhan batubara di Embalut, berupa stock pile seluas 7 hektar berikut konveyor dengan kapasitas hingga 500 mt/jam.  Dermaga dapat mengakomodasi tongkang batubara ukuran 270 kaki hingga 300 kaki.  Diantara perusahaan yang menggunakan layanan ini adalah sebuah perusahaan tambang dari JSI Group.
                   </p>
               </div>
             </div>
