--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
               </a>
             </li>
             <li>
-              <a href="contact.html">
+              <a href="career.html">
                 Karir
               </a>
             </li>
@@ -292,27 +292,27 @@
           <div class="container">
               <div class="row text-center">
                   <div class="col-lg-12 pb-5">
-                  <a href="about.html" class="link-orange-border mx-lg-4">
+                  <a href="about.html#tentang" class="link-orange-border mx-lg-4">
                       <span class="text-orange">
                         TENTANG KAMI
                       </span> 
                   </a>
-                  <a href="about.html" class="link-orange-border mx-lg-4">
+                  <a href="about.html#visi" class="link-orange-border mx-lg-4">
                     <span class="text-orange">
                       VISI & MISI
                     </span> 
                   </a>
-                  <a href="about.html" class="link-orange-border mx-lg-4">
+                  <a href="about.html#nilai" class="link-orange-border mx-lg-4">
                   <span class="text-orange">
                     NILAI-NILAI INTI
                   </span> 
                   </a>
-                  <a href="about.html" class="link-orange-border mx-lg-4">
+                  <a href="about.html#dewan" class="link-orange-border mx-lg-4">
                     <span class="text-orange">
                       DEWAN KOMISARIS
                     </span> 
                   </a>
-                  <a href="about.html" class="link-orange-border mx-lg-4">
+                  <a href="about.html#direksi" class="link-orange-border mx-lg-4">
                     <span class="text-orange">
                       DIREKSI
                     </span> 
