--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="contact.html">
+                  <a href="career.html">
                     Karir
                   </a>
                 </li>
@@ -416,7 +416,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid footer-details mb-5 pt-5">
+<div class="container-fluid footer-details bg-white mb-5 pt-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
@@ -450,13 +450,13 @@
   </div>
 </div>
 <div class="container-fluid footer bg-dark-blue">
-    <div class="row">
-        <div class="col-lg-12">
-            <p class="text-white mt-3 text-center">
-                Copyright © 2020 PT Ansaf Inti Resources
-            </p>
-        </div>
-    </div>
+  <div class="row">
+      <div class="col-lg-12">
+          <p class="text-white mt-3 text-center">
+              Copyright © 2020 PT Ansaf Inti Resources
+          </p>
+      </div>
+  </div>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
