--- a/career.html
+++ b/career.html
@@ -51,7 +51,7 @@
               </a>
             </li>
             <li>
-              <a href="contact.html">
+              <a href="career.html">
                 Karir
               </a>
             </li>
@@ -189,7 +189,7 @@
           <p class="text-white text-center w-75 py-lg-3 mx-auto">
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl.
             <br><br>
-            Kirim CV anda ke <span class="text-orange">contact.ansaf@gmail.co.id</span>  jika anda tertarik untuk bergabung dengan tim dan kami akan menghubungi anda.
+            Kirim CV anda ke <a class="text-orange" href="mailto:contact.ansaf@gmail.co.id">contact.ansaf@gmail.co.id</a>  jika anda tertarik untuk bergabung dengan tim dan kami akan menghubungi anda.
           </p>
         </div>
       </div>
@@ -199,7 +199,7 @@
         <div class="col-lg-5 pl-lg-0">
           <img class="w-100 img-fluid" src="images/career-img-content-03.jpg" alt=""/>
         </div>
-        <div class="col-lg-6 offset-lg-1 py-lg-5 pr-lg-5">
+        <div class="col-lg-6 offset-lg-1 pb-lg-5 pr-lg-5">
           <h5 class="text-orange">
             Accounting Supervisor
           </h5>
@@ -237,7 +237,7 @@
         </div>
       </div>
       <div class="row py-lg-5">
-        <div class="pl-lg-5 col-lg-5 py-lg-5">
+        <div class="pl-lg-5 col-lg-5 pb-lg-5">
           <h5 class="text-orange">
             Accounting Supervisor
           </h5>
