--- a/existing-projects.html
+++ b/existing-projects.html
@@ -51,7 +51,7 @@
               </a>
             </li>
             <li>
-              <a href="contact.html">
+              <a href="career.html">
                 Karir
               </a>
             </li>
