--- a/career.html
+++ b/career.html
@@ -183,13 +183,10 @@
     <div class="container-fluid career-brief">
       <div class="row">
         <div class="col-lg-12 px-lg-5">
-          <h3 class="text-white text-center">
-            Tulisan Pembuka
-          </h3>
           <p class="text-white text-center w-75 py-lg-3 mx-auto">
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl.
-            <br><br>
-            Kirim CV anda ke <a class="text-orange" href="mailto:contact.ansaf@gmail.co.id">contact.ansaf@gmail.co.id</a>  jika anda tertarik untuk bergabung dengan tim dan kami akan menghubungi anda.
+            Pintu kami selalu terbuka lebar bagi individu bertalenta yang bertanggung jawab untuk bergabung dengan tim kami.<br>
+            Kirimkan CV Anda ke <a class="text-orange" href="mailto:contact.ansaf@gmail.co.id">contact.ansaf@gmail.co.id</a> jika Anda tertarik untuk bergabung, tim kami akan segera<br>
+            menghubungi Anda kembali.
           </p>
         </div>
       </div>
