--- a/gallery.html
+++ b/gallery.html
@@ -801,17 +801,17 @@
           <div class="container">
               <div class="row text-center">
                   <div class="col-lg-12 pb-5">
-                    <a href="contact.html" class="link-orange-border mx-lg-4">
+                    <a href="businesses.html" class="link-orange-border mx-lg-4">
                       <span class="text-orange">
                         BISNIS KAMI
                       </span> 
                    </a>
-                   <a href="contact.html" class="link-orange-border mx-lg-4">
+                   <a href="projects.html" class="link-orange-border mx-lg-4">
                     <span class="text-orange">
                       PROYEK KAMI
                     </span> 
                   </a>
-                  <a href="contact.html" class="link-orange-border mx-lg-4">
+                  <a href="csr.html" class="link-orange-border mx-lg-4">
                       <span class="text-orange">
                         CSR PROGRAM
                       </span> 
