--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
                 <div class="col-lg-2 ml-lg-5">
                   <a href="index.html">
                     <img class="img-fluid logo d-none d-lg-block" src="images/ansaf-logo.png" alt="">
-                    <img class="img-fluid logo d-lg-none" src="images/logo-white.png" alt="">
+                    <img class="img-fluid logo d-lg-none" src="images/ansaf-logo.png" alt="">
                   </a>
                 </div>
                 <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
@@ -193,11 +193,11 @@
     <div id="tentang" class="container-fluid about-mid bg-dark-blue position-relative overflow-hidden">
       <div class="row">
         <div class="container-fluid py-lg-5">
-          <div class="row my-lg-5 py-lg-5">
+          <div class="row my-lg-5 py-5">
             <div class="col-lg-3 menu-about">
               
             </div>
-            <div class="col-lg-8 ml-lg-5">
+            <div class="col-lg-8 ml-lg-5 ml-4">
               <div class="tab-content" id="v-pills-tabContent">
                 <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
                   <h2 class="text-orange mb-lg-4">
