--- a/index.html
+++ b/index.html
@@ -85,64 +85,40 @@
                 </a>
                 <ul>
                     <li>
-                      <a href="#">
-                        About Us
+                      <a href="about.html">
+                        Tentang Kami
                       </a>
-                      <ul>
-                        <li>
-                          <a href="about.html">
-                            Company Profile
-                          </a>
-                        </li>
-                        <li>
-                          <a href="vision-mission.html">
-                            Vision & Mission
-                          </a>
-                        </li>
-                        <li>
-                          <a href="bod.html">
-                            Board of Directors
-                          </a>
-                        </li>
-                      </ul>
                     </li>
                     <li>
                       <a href="businesses.html">
-                        Our Businesses
+                        Bisnis Kami
                       </a>
                     </li>
                     <li>
                       <a href="projects.html">
-                        Our Projects
+                        Proyek Kami
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="csr.html">
                         CSR
                       </a>
-                      <ul>
-                        <li>
-                          <a href="csr.html">
-                           CSR Program
-                          </a>
-                        </li>
-                        <li>
-                          <a href="csr-activities.html">
-                            CSR Activities
-                          </a>
-                        </li>
-                      </ul>
                     </li>
                     <li>
                       <a href="gallery.html">
-                        Gallery
+                        Galeri
                       </a>
                     </li>
                     <li>
-                      <a href="contact.html">
-                        Contact Us
+                      <a href="career.html">
+                        Karir
                       </a>
-                    </li> 
+                    </li>
+                    <li>
+                        <a href="contact.html">
+                          Kontak Kami
+                        </a>
+                      </li> 
                   </ul>
                   <hr class="my-5">
                   <div class="lang-ansaf">
@@ -422,10 +398,10 @@
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
       <div class="col-lg-4 py-lg-0 py-4">
-          <p class="text-gray">
-              Kantor Taman E3.3 Unit B5<br>
-              Jl Dr Ide Anak Agung Gede Agung Lot<br>
-              Kawasan Mega Kuningan Jakarta 12950
+          <p class="text-gray alamat">
+              Kantor Taman E.3.3 Unit B5<br>
+              Jl. Dr. Ide Anak Agung Gde Agung, Kuningan Timur,
+              Setiabudi, Jakarta Selatan 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
